--- a/bigpicture.tex
+++ b/bigpicture.tex
@@ -19,7 +19,7 @@ I need to first understand sky subtraction and flat-fielding in spectroscopy in 
 \subsection*{Week 1}
 I tried reading arXiv:astro-ph/0501460 first and got lost towards the end.  Reading github.com/davidwhogg/Spectroscopy/documents/spectroscopy.tex helped substantially with putting it into the context of a consistent mathematical model (rather than the somewhat inconsistent one I was putting together ad hoc in my head).  I reviewed some of my notes on fiber optic spectroscopy from the Dunlap Institute Summer School in Astronomical Instrumentation and the remainder of my confusion was resolved!  I almost certainly still have some holes in my understanding, but at least the big ones are covered, I think.
 \subsection*{Week 2}
-Raw SDSS data is available in http://das.sdss.org/unprocessed/spectro/ and sky-subtracted SDSS data is available in http://das.sdss.org/spectro/.  I'm working on setting up PyFITS to read the damn things.
+Raw SDSS data is available in http://das.sdss.org/unprocessed/spectro/ and sky-subtracted SDSS data is available in http://das.sdss.org/spectro/.  I can use Python to work with the FITS files but don't really know what it is that I'm looking at yet.
 
 \end{document}
 
