--- a/bigpicture.tex
+++ b/bigpicture.tex
@@ -10,16 +10,18 @@
 \newcommand{\textul}{\underline}
 
 \begin{document}
-\section*{Goals}
+\section*{Big Picture}
 I need to first understand sky subtraction and flat-fielding in spectroscopy in general.  I also need to gain a better understanding of how SDSS plates work, as opposed to IFU spectroscopy.  Then I might be ready to try improving SDSS calibration methods.\\
 \indent Sky lines are the bane of NIR observations, and removing them without degrading low-S/N data can be tricky.  In general, science data are calibrated against shots of the dome (which may reflect some of the light we aim to collect) and the sky (which will incorporate sky lines and weather).  The current method SDSS uses to calibrate observations normalizes each science observation to the sky/dome conditions immediately before and after that observation.  This assumes that there is no short-term instability and that long-term sky/dome conditions accessible through previous sky/dome observations contain no useful information.\\
 \indent Instabilities that could affect the calibration include defects in the fibers across the focal plane, asymmetries of the dome, weather, and mechanical aspects of the plates.  If these factors could be modeled (like a physically motivated version of PCA), the effects could be removed better than just by effectively smoothing out the residuals of an improper sky subtraction technique.  It is unclear how big a difference this would make, but it probably has to be done before any other improvements could be made.\\
 \indent Another way to account for short-term variability is to take advantage of the actual science data in calibration (which would be something like self-calibration or auto-calibration, I guess).  Once corrected using PCA, the science images may be combined to generate a slit position-wavelength relation on the focal plane that could further validate understanding of the sources of instability, such as weather.  This would be valuable for eliminating the inefficiency of taking sky spectra separately as well as the inaccuracy caused by using a small number of sky fibers to calibrate a large number of science fibers when conditions may vary considerably over the focal plane.
 \section*{Progress}
 \subsection*{Week 1}
-I tried reading arXiv:astro-ph/0501460 first and got lost towards the end.  Reading github.com/davidwhogg/Spectroscopy/documents/spectroscopy.tex helped substantially with putting it into the context of a consistent mathematical model (rather than the somewhat inconsistent one I was putting together ad hoc in my head).  I reviewed some of my notes on fiber optic spectroscopy from the Dunlap Institute Summer School in Astronomical Instrumentation and the remainder of my confusion was resolved!  I almost certainly still have some holes in my understanding, but at least the big ones are covered, I think.
+Goal: Understand SDSS sky-subtraction procedure.\\
+\indent I tried reading arXiv:astro-ph/0501460 first and got lost towards the end.  Reading github.com/davidwhogg/Spectroscopy/documents/spectroscopy.tex helped substantially with putting it into the context of a consistent mathematical model (rather than the somewhat inconsistent one I was putting together ad hoc in my head).  I reviewed some of my notes on fiber optic spectroscopy from the Dunlap Institute Summer School in Astronomical Instrumentation and the remainder of my confusion was resolved!  I almost certainly still have some holes in my understanding, but at least the big ones are covered, I think.
 \subsection*{Week 2}
-Raw SDSS data is available in http://das.sdss.org/unprocessed/spectro/ and sky-subtracted SDSS data is available in http://das.sdss.org/spectro/.  I can use Python to work with the FITS files but don't really know what it is that I'm looking at yet.
+Goals: Get comfortable working with SDSS spectra pre-sky-subtraction uncalibrated data.\\
+\indent The DR9 data that's relevant to BOSS is described in http://iopscience.iop.org/1538-3881/123/1/485/pdf/1538-3881\_123\_1\_485.pdf.  The spectro2d and spectro1d procedures require sky data, so that should be accessible.  Unfortunately, the earliest stage of data available on https://www.sdss3.org/dr9/spectro/pipeline.php has already been normalized to zero.  I'm going to try to get ahead on my homework until appropriate data becomes available.
 
 \end{document}
 
