--- a/bigpicture.tex
+++ b/bigpicture.tex
@@ -21,7 +21,10 @@ Goal: Understand SDSS sky-subtraction procedure.\\
 \indent I tried reading arXiv:astro-ph/0501460 first and got lost towards the end.  Reading github.com/davidwhogg/Spectroscopy/documents/spectroscopy.tex helped substantially with putting it into the context of a consistent mathematical model (rather than the somewhat inconsistent one I was putting together ad hoc in my head).  I reviewed some of my notes on fiber optic spectroscopy from the Dunlap Institute Summer School in Astronomical Instrumentation and the remainder of my confusion was resolved!  I almost certainly still have some holes in my understanding, but at least the big ones are covered, I think.
 \subsection*{Week 2}
 Goals: Get comfortable working with SDSS spectra pre-sky-subtraction uncalibrated data.\\
-\indent The DR9 data that's relevant to BOSS is described in http://iopscience.iop.org/1538-3881/123/1/485/pdf/1538-3881\_123\_1\_485.pdf.  The spectro2d and spectro1d procedures require sky data, so that should be accessible.  Unfortunately, the earliest stage of data available on https://www.sdss3.org/dr9/spectro/pipeline.php has already been normalized to zero.  I'm going to try to get ahead on my homework until appropriate data becomes available.
+\indent The DR9 data that's relevant to BOSS is described in http://iopscience.iop.org/1538-3881/123/1/485/pdf/1538-3881\_123\_1\_485.pdf.  The spectro2d and spectro1d procedures require sky data, so that should be accessible.  Unfortunately, the earliest stage of data available on https://www.sdss3.org/dr9/spectro/pipeline.php has already been normalized to zero. . .
+\subsection*{Week 3}
+Goals: Start exploring correlations in sky spectra that are subtracted.\\
+Aah, with help from Adam Bolton, it is revealed that the error is indeed mine; the less processed data are only available in the output of later steps of the pipeline.
 
 \end{document}
 
